--- a/css/style.css
+++ b/css/style.css
@@ -1235,105 +1235,101 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 
 /*showcase*/
-img {
-  vertical-align: middle;
-}
-
-
-.containers {
-    overflow: hidden;
+.carousel {
   position: relative;
+  max-width: 1000px;
+  margin: 0 auto;
 }
 
+.lightbox {
+  z-index: 999;
+}
 
-.mySlides {
+.slides {
+  position: relative;
+  list-style: none;
+  overflow: hidden;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+}
+.slides li {
+  -webkit-backface-visibility: hidden;
+  position: absolute;
   display: none;
-}
-
-.mySlides img {
-    height: 100vh;
-    width: 1000px;
-}
-
-
-.cursor {
-  cursor: pointer;
-}
-
-
-.prev,
-.next {
-  cursor: pointer;
-  position: absolute;
-  top: 40%;
-  width: auto;
-  padding: 16px;
-  margin-top: -50px;
-  color: white;
-  font-weight: bold;
-  font-size: 20px;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-  -webkit-user-select: none;
-}
-
-
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-
-.prev:hover,
-.next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
-
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
+  overflow: hidden;
+  width: 100%;
+  left: 0;
   top: 0;
 }
-
-.caption-container {
-  text-align: center;
-  background-color: #222;
-  padding: 2px 16px;
-  color: white;
-}
-
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-
-.column {
+.slides li:first-child {
+  position: relative;
+  display: block;
   float: left;
-  width: 16.66%;
+}
+.slides img {
+  display: block;
+  height: auto;
+  float: left;
+  width: 100%;
+  border: 0;
+}
+.slides .caption {
+  position: absolute;
+  display: block;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 15px;
+  margin: 0;
+  text-align: center;
+  background: #000;
+  background: rgba(0, 0, 0, 0.38);
+  color: #fff;
 }
 
-.column img {
-    height: 150px;
-    width: 16%;
+.slides_tabs {
+  list-style: none;
+  padding: 0;
+  margin: 1.5rem 0;
+}
+.slides_tabs li {
+  display: inline-block;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  margin-right: 0.75em;
+}
+.slides_tabs a {
+  display: block;
+  width: 100px;
+  height: 100px;
 }
 
-
-.demo {
-  opacity: 0.6;
+.slides_nav {
+  position: absolute;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  top: 50%;
+  left: 0;
+  opacity: 0.7;
+  z-index: 3;
+  overflow: hidden;
+  text-decoration: none;
+  margin-top: -80px;
 }
-
-.active,
-.demo:hover {
-  opacity: 1;
+.slides_nav.next {
+  left: auto;
+  right: 0;
 }
-
-
-
+.slides_nav svg {
+  vertical-align: middle;
+  fill: none;
+  stroke: white;
+  stroke-width: 3px;
+  background-color: rgba(0, 0, 0, 0.38);
+  padding: 10px;
+  height: 3rem;
+}
 
 
 
